# DeviceAware

./: .gitignore  Cargo.toml
src/: main.rs
