[package]
name = "DeviceAware"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Registry", # 用于 GUID 定义
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
] }